# Android-OboeAudioPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/phuket/tour/audioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/google/oboe/samples/hellooboe/: BackgroundRunner.java  PlaybackEngine.java
app/src/main/java/com/phuket/tour/audioplayer/: MainActivity.java  OboeActivity.java
app/src/main/java/com/phuket/tour/audioplayer/audio_device/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java
app/src/main/java/com/phuket/tour/audioplayer/audiotrack/: NativeMp3Player.java  NativeMp3PlayerController.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/libcommon/: CommonTools.h  packet_queue.h
app/src/main/jni/libmedia/: opensl_es_context.cpp  sound_service.cpp  sound_service.h
app/src/main/jni/libmusicdecoder/: accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp  accompany_decoder_controller.h
app/src/main/jni/liboboe/: HelloOboeEngine.cpp  HelloOboeEngine.h  LatencyTuningCallback.h  Mp3Generator.cpp  Mp3Generator.h  Mp3OboeEngine.cpp  Mp3OboeEngine.h  SoundGenerator.cpp  SoundGenerator.h  jni_bridge.cpp
app/src/main/jni/liboboe/shared/: DefaultDataCallback.h  DefaultErrorCallback.h  IRenderableAudio.h  Oscillator.h
app/src/main/res/layout/: activity_main.xml  activity_oboe.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/phuket/tour/audioplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
